# mcp-agent-network

./: .gitignore  README.md  pyproject.toml
docs/eye/context/: .cursorrules
docs/memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
examples/: basic_example.py  mcp_connection_example.py
src/mcp_agent_network/: __init__.py
src/mcp_agent_network/browser/: __init__.py
src/mcp_agent_network/cli/: __init__.py  main.py
src/mcp_agent_network/core/: __init__.py  agent_network.py
src/mcp_agent_network/mcp/: __init__.py  client.py  connection_manager.py  progress.py
src/mcp_agent_network/orchestration/: __init__.py
tests/: test_agent_network.py  test_mcp_client.py  test_mcp_connection_manager.py
