[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-agent-network"
version = "0.1.0"
description = "Agent network built on MCP technology with Upsonic orchestration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "upsonic",
    "playwright",
    "browseruse",
    "browser-tools-mcp",
    "fast-agent.ai",
    "pytest",
]

[project.scripts]
mcp-agent = "mcp_agent_network.cli:main"

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true 